# python-package-via-oidc-on-cloudsmith

./: README.md
.github/workflows/: main.yml
sample-python-package/: LICENSE  README.md  pyproject.toml
sample-python-package/sample-python-package/: __init__.py  main.py
