[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-python-package"
version = "0.1.0"
description = "A simple package that prints Hello, World!"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Radhika Sharma", email = "radhika.sharma.connect@gmail.com" }
]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
python-requires = ">=3.7"